# soroban-security-detectors-sdk

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md  SECURITY.md  clean.sh  coverage.sh
.github/: CODEOWNERS
.github/workflows/: artifacts.yml  build.yml  release.yml
detectors/: Cargo.toml  README.md  build.rs
detectors-runner/: Cargo.toml  README.md
detectors-runner/docs/: overview.md
detectors-runner/src/: main.rs  parser.rs
detectors/docs/: overview.md  writing_detectors.md
detectors/metadata/: contract-can-panic.yml  contract-without-functions.yml  extend-ttl-with-max-ttl.yml  file-without-no-std.yml  return-default-struct.yml  temporary-storage-value-used-as-condition.yml  use-storage-key-from-function-parameter.yml
detectors/src/: contract_can_panic.rs  contract_without_functions.rs  extend_ttl_with_max_ttl.rs  file_without_no_std.rs  lib.rs  temporary_storage_value_used_as_condition.rs
doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
doc/search.desc/soroban_scanner/: soroban_scanner-desc-0-.js
doc/search.desc/soroban_security_detectors/: soroban_security_detectors-desc-0-.js
doc/search.desc/soroban_security_detectors_sdk/: soroban_security_detectors_sdk-desc-0-.js
doc/soroban_scanner/: all.html  fn.available_detectors.html  fn.custom_detectors.html  fn.detector_result_to_json.html  fn.execute_detectors.html  fn.get_scanner_metadata.html  fn.main.html  fn.relative_file_path.html  fn.yml_string_to_json.html  index.html  sidebar-items.js
doc/soroban_scanner/parser/: enum.Commands.html  index.html  struct.Cli.html
doc/soroban_security_detectors/: all.html  fn.all_detectors.html  index.html  sidebar-items.js
doc/soroban_security_detectors/contract_can_panic/: index.html  sidebar-items.js  struct.ContractCanPanic.html
doc/soroban_security_detectors/contract_without_functions/: index.html  sidebar-items.js  struct.ContractWithoutFunctions.html
doc/soroban_security_detectors/extend_ttl_with_max_ttl/: index.html  sidebar-items.js  struct.ExtendTtlWithMaxTtl.html
doc/soroban_security_detectors/file_without_no_std/: index.html  sidebar-items.js  struct.FileWithoutNoStd.html
doc/soroban_security_detectors/temporary_storage_value_used_as_condition/: index.html  sidebar-items.js  struct.TemporaryStorageValueUsedAsCondition.html
doc/soroban_security_detectors_sdk/: all.html  fn.build_codebase.html  index.html  macro.ast_enum.html  macro.ast_node.html  macro.ast_node_impl!.html  macro.ast_node_impl.html  macro.ast_nodes.html  macro.ast_nodes_impl!.html  macro.ast_nodes_impl.html  macro.detector!.html  macro.detector.html  macro.detectors!.html  macro.detectors.html  macro.location.html  macro.source_code.html  sidebar-items.js  struct.Codebase.html  struct.NodeRoute.html  struct.NodesStorage.html  struct.OpenState.html  struct.SealedState.html
doc/soroban_security_detectors_sdk/codebase/: struct.Codebase.html  struct.OpenState.html  struct.SealedState.html
doc/soroban_security_detectors_sdk/contract/: index.html  sidebar-items.js  struct.Contract.html  struct.Struct.html
doc/soroban_security_detectors_sdk/custom_type/: enum.Type.html  index.html  sidebar-items.js  struct.TStruct.html  struct.TypeAlias.html  struct.Typename.html
doc/soroban_security_detectors_sdk/definition/: enum.Definition.html  index.html  sidebar-items.js  struct.Const.html  struct.CustomType.html  struct.Enum.html  struct.ExternCrate.html  struct.Implementation.html  struct.Module.html  struct.Plane.html  struct.Static.html  struct.Trait.html  struct.TraitAlias.html  struct.Union.html
doc/soroban_security_detectors_sdk/detector/: index.html  sidebar-items.js  struct.DetectorOpaque.html  struct.DetectorResult.html  trait.CombinedDetector.html  trait.Detector.html  trait.DetectorReportTemplate.html  type.SealedCodebase.html  type.SorobanDetector.html
doc/soroban_security_detectors_sdk/directive/: enum.Directive.html  index.html  sidebar-items.js  struct.Use.html
doc/soroban_security_detectors_sdk/errors/: enum.SDKErr.html  index.html  sidebar-items.js
doc/soroban_security_detectors_sdk/expression/: enum.BinOp.html  enum.Expression.html  enum.ExpressionParentType.html  enum.UnOp.html  index.html  sidebar-items.js  struct.Addr.html  struct.Array.html  struct.Assign.html  struct.Binary.html  struct.Break.html  struct.Cast.html  struct.Closure.html  struct.ConstBlock.html  struct.Continue.html  struct.EBlock.html  struct.EStruct.html  struct.ForLoop.html  struct.FunctionCall.html  struct.Identifier.html  struct.If.html  struct.IndexAccess.html  struct.LetGuard.html  struct.Lit.html  struct.Loop.html  (+15 more)
docs/: 1_Overview.md  2_System_Architecture.md  3_AST_System.md  4_AST_Node_Types.md  5_Symbol_Table_and_Analysis.md  6_Codebase_Management.md  7_Security_Detectors.md  8_CLI_Scanner.md  9_Development_Guide.md  README.md  contributing.md  getting_started.md  overview.md  style_guidelines.md
macro-lib/: Cargo.toml
macro-lib/src/: lib.rs
macro_lib/: Cargo.toml
macro_lib/src/: lib.rs
rules/: Cargo.toml
rules-runner/: Cargo.toml
rules-runner/src/: main.rs
rules/src/: lib.rs
sdk/: Cargo.toml  README.md
sdk/docs/: api_reference.md  overview.md  usage.md
sdk/src/: ast_types_builder.rs  codebase.rs  codebase_builder.rs  detector.rs  errors.rs  extern_prelude.rs  lib.rs  prelude.rs  storage.rs  symbol_table.rs
sdk/src/ast/: build.rs  contract.rs  custom_type.rs  definition.rs  directive.rs  expression.rs  file.rs  function.rs  inner_type.rs  literal.rs  misc.rs  mod.rs  node.rs  node_type.rs  pattern.rs  statement.rs
sdk/src/utils/: mod.rs  project.rs  sdk_resolver.rs  test.rs
soroban-rules-runner/src/: main.rs
soroban-scanner/: Cargo.toml  README.md
soroban-scanner/docs/: usage.md
soroban-scanner/src/: main.rs
soroban_rules_runner/: Cargo.toml
soroban_rules_runner/src/: main.rs
src/: ast.rs  codebase.rs  errors.rs  lib.rs
src/ast/: contract.rs  expression.rs  file.rs  function.rs  mod.rs  node.rs  node_type.rs  statement.rs
src/utils/: test.rs
tests/: account.rs  multiple_contracts.rs  synthetic_root.rs
(+248 files in other folders)
