[workspace]

resolver = "2"

members = [
    "rules",
    "sdk",
    "rules-runner",
    "macro-lib"
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT"
homepage = "https://www.openzeppelin.com/"
repository = "https://github.com/OpenZeppelin/soroban-security-rules-sdk"

[workspace.dependencies]
soroban-security-rules = { path = "./rules", version = "0.0.1" }
soroban-security-rules-sdk = { path = "./sdk", version = "0.0.1" }
soroban-security-rules-runner = { path = "./rules-runner", version = "0.0.1" }
soroban-security-rules-macro-lib = { path = "./macro-lib", version = "0.0.1" }

syn = { version = "2.0.95", features = ["full"] }
quote = "1.0.38"
proc-macro2 = { version = "1.0.92", features = ["span-locations"] }
