[workspace]

resolver = "2"

members = [
    "detectors",
    "sdk",
    "detectors-runner",
    "macro-lib"
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT"
homepage = "https://www.openzeppelin.com/"
repository = "https://github.com/OpenZeppelin/soroban-security-detectors-sdk"

[workspace.dependencies]
soroban-security-detectors = { path = "./detectors", version = "0.0.1" }
soroban-security-detectors-sdk = { path = "./sdk", version = "0.0.1" }
soroban-security-detectors-runner = { path = "./detectors-runner", version = "0.0.1" }
soroban-security-detectors-macro-lib = { path = "./macro-lib", version = "0.0.1" }

syn = { version = "2.0.101", features = ["full"] }
quote = "1.0.40"
proc-macro2 = { version = "1.0.95", features = ["span-locations"] }
