[workspace]

resolver = "2"

members = [
    "detectors",
    "sdk",
    "soroban-scanner",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
homepage = "https://www.openzeppelin.com/"
repository = "https://github.com/OpenZeppelin/soroban-security-detectors-sdk"

[workspace.dependencies]
soroban-security-detectors = { path = "./detectors", version = "0.0.1" }
soroban-security-detectors-sdk = { path = "./sdk", version = "0.0.1" }
soroban-scanner = { path = "./soroban-scanner", version = "0.0.1" }

syn = { version = "2.0.104", features = ["full", "visit"] }
quote = "1.0.40"
proc-macro2 = { version = "1.0.95", features = ["span-locations"] }
