[package]
name = "soroban-security-detectors-runner"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
soroban-security-detectors-sdk.workspace = true
soroban-security-detectors.workspace = true