[package]
name = "soroban-security-rules-runner"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
soroban-security-rules-sdk.workspace = true
soroban-security-rules.workspace = true