[package]
name = "soroban-security-detectors-sdk"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = "1.0.71"
thiserror = "2.0.9"
serde = { version = "1.0.217", features = ["derive", "rc"] }
serde_json = "1.0.135"
uuid = { version = "1.1", features = ["v4"] }
regex = { version = "1.8", features = ["unicode"] }
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
semver = "1.0.20"
lazy_static = "1.4.0"

[dev-dependencies]
soroban-sdk = "22.0.4"

[lints.rust]
unused_imports = "allow" # we use it because clippy cannot properly recognize imports in macro, for example see location! macro
unnecessary_debug_formatting = "allow"